cmake_minimum_required(VERSION 3.10)
project(Test)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_subdirectory(common)
add_subdirectory(modules)
add_executable(server server.cpp)
add_executable(client client.cpp)
add_executable(test main.cpp)
target_link_libraries(test M1 M2 ${OpenCV_LIBS})
target_link_libraries(server M1 M2 ${OpenCV_LIBS})
target_link_libraries(client M1 M2 ${OpenCV_LIBS})